--- a/centerpiece/pubspec.yaml
+++ b/centerpiece/pubspec.yaml
@@ -30,12 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^1.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
-  animated_radial_menu: ^0.0.1
+  circular_menu : ^1.0.0
 
 dev_dependencies:
   flutter_test:
